# tc-auth-service

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pr-checks.yml  pr-comment.yml  release-dev.yml  release-prod.yml  test-coverage.yml
app/: main.py
app/database/: database.py
app/middleware/: middleware.py
app/models/: models.py  schemas.py
app/routers/: auth.py  customer.py
app/services/: repository.py  security.py
app/tests/: conftest.py  route_customer.py  test_app.py  test_middleware.py  test_models.py  test_route_auth.py  test_schemas.py  test_security.py  test_service_repository.py  test_services_repository.py
cmd/: entrypoint.sh
infra/kubernetes/base/: kustomization.yaml
infra/kubernetes/base/auth/: configmap.yaml  deployment.yaml  service.yaml
infra/kubernetes/base/db/: configmap.yaml  pvc.yaml  secret.yaml  service.yaml  statefulset.yaml
infra/kubernetes/development/: kustomization.yaml  patch-deployment.yaml
infra/kubernetes/production/: kustomization.yaml  patch-db.yaml  patch-deployment.yaml
